# daegun-four-cut

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
ui/: main_window.py  main_window.ui  resources.qrc  resources_rc.py
