[tool.poetry]
name = "daegun-four-cut"
version = "0.1.0"
description = ""
authors = ["Dohyun Kim <0704dohyun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
opencv-python = "^4.10.0.84"
PySide6 = "6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
